--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "express": "^5.1.0",
     "fs-extra": "^11.3.1",
     "input-otp": "^1.4.2",
+    "lambda-multipart-parser": "^1.0.1",
     "lucide-react": "^0.462.0",
     "multer": "^2.0.2",
     "next-themes": "^0.3.0",
