--- a/netlify.toml
+++ b/netlify.toml
@@ -1,26 +1,27 @@
 [build]
-  functions = "netlify/functions"
-  publish = "dist"
+functions = "netlify/functions"
+publish = "dist"
+command = "npm run build"
 
 [[redirects]]
-  from = "/api/upload"
-  to = "/.netlify/functions/upload"
-  status = 200
+from = "/api/upload"
+to = "/.netlify/functions/upload"
+status = 200
 
 [[redirects]]
-  from = "/api/download/*"
-  to = "/.netlify/functions/download"
-  status = 200
+from = "/api/download/*"
+to = "/.netlify/functions/download"
+status = 200
 
 [[redirects]]
-  from = "/download/*"
-  to = "/index.html"
-  status = 200
+from = "/download/*"
+to = "/index.html"
+status = 200
 
 [[redirects]]
-  from = "/*"
-  to = "/index.html"
-  status = 200
+from = "/*"
+to = "/index.html"
+status = 200
 
 [functions]
-  node_bundler = "esbuild"
+node_bundler = "esbuild"
