--- a/netlify.toml
+++ b/netlify.toml
@@ -14,6 +14,11 @@ to = "/.netlify/functions/download"
 status = 200
 
 [[redirects]]
+from = "/api/cleanup"
+to = "/.netlify/functions/cleanup"
+status = 200
+
+[[redirects]]
 from = "/download/*"
 to = "/index.html"
 status = 200
