--- a/package.json
+++ b/package.json
@@ -73,6 +73,8 @@
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^11.1.0",
     "vaul": "^0.9.9",
+    "webdav": "^5.7.1",
+    "webdav": "^5.8.0",
     "zod": "^3.25.76"
   },
   "devDependencies": {
