--- a/package.json
+++ b/package.json
@@ -1,98 +1,203 @@
-{
-  "name": "vite_react_shadcn_ts",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "server": "node server/index.js",
-    "dev:full": "concurrently \"npm run server\" \"npm run dev\"",
-    "build": "vite build",
-    "build:dev": "vite build --mode development",
-    "lint": "eslint .",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "@hookform/resolvers": "^3.10.0",
-    "@radix-ui/react-accordion": "^1.2.11",
-    "@radix-ui/react-alert-dialog": "^1.1.14",
-    "@radix-ui/react-aspect-ratio": "^1.1.7",
-    "@radix-ui/react-avatar": "^1.1.10",
-    "@radix-ui/react-checkbox": "^1.3.2",
-    "@radix-ui/react-collapsible": "^1.1.11",
-    "@radix-ui/react-context-menu": "^2.2.15",
-    "@radix-ui/react-dialog": "^1.1.14",
-    "@radix-ui/react-dropdown-menu": "^2.1.15",
-    "@radix-ui/react-hover-card": "^1.1.14",
-    "@radix-ui/react-label": "^2.1.7",
-    "@radix-ui/react-menubar": "^1.1.15",
-    "@radix-ui/react-navigation-menu": "^1.2.13",
-    "@radix-ui/react-popover": "^1.1.14",
-    "@radix-ui/react-progress": "^1.1.7",
-    "@radix-ui/react-radio-group": "^1.3.7",
-    "@radix-ui/react-scroll-area": "^1.2.9",
-    "@radix-ui/react-select": "^2.2.5",
-    "@radix-ui/react-separator": "^1.1.7",
-    "@radix-ui/react-slider": "^1.3.5",
-    "@radix-ui/react-slot": "^1.2.3",
-    "@radix-ui/react-switch": "^1.2.5",
-    "@radix-ui/react-tabs": "^1.1.12",
-    "@radix-ui/react-toast": "^1.2.14",
-    "@radix-ui/react-toggle": "^1.1.9",
-    "@radix-ui/react-toggle-group": "^1.1.10",
-    "@radix-ui/react-tooltip": "^1.2.7",
-    "@supabase/supabase-js": "^2.53.0",
-    "@tanstack/react-query": "^5.83.0",
-    "@types/node-cron": "^3.0.11",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "cmdk": "^1.1.1",
-    "cors": "^2.8.5",
-    "date-fns": "^3.6.0",
-    "embla-carousel-react": "^8.6.0",
-    "express": "^5.1.0",
-    "fs-extra": "^11.3.1",
-    "input-otp": "^1.4.2",
-    "lambda-multipart-parser": "^1.0.1",
-    "lucide-react": "^0.462.0",
-    "multer": "^2.0.2",
-    "next-themes": "^0.3.0",
-    "node-cron": "^4.2.1",
-    "path": "^0.12.7",
-    "react": "^18.3.1",
-    "react-day-picker": "^8.10.1",
-    "react-dom": "^18.3.1",
-    "react-dropzone": "^14.3.8",
-    "react-hook-form": "^7.61.1",
-    "react-resizable-panels": "^2.1.9",
-    "react-router-dom": "^6.30.1",
-    "recharts": "^2.15.4",
-    "sonner": "^1.7.4",
-    "sqlite3": "^5.1.7",
-    "tailwind-merge": "^2.6.0",
-    "tailwindcss-animate": "^1.0.7",
-    "uuid": "^11.1.0",
-    "vaul": "^0.9.9",
-    "zod": "^3.25.76"
-  },
-  "devDependencies": {
-    "@eslint/js": "^9.32.0",
-    "@tailwindcss/typography": "^0.5.16",
-    "@types/node": "^22.16.5",
-    "@types/react": "^18.3.23",
-    "@types/react-dom": "^18.3.7",
-    "@vitejs/plugin-react-swc": "^3.11.0",
-    "autoprefixer": "^10.4.21",
-    "concurrently": "^9.2.0",
-    "eslint": "^9.32.0",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.20",
-    "globals": "^15.15.0",
-    "lovable-tagger": "^1.1.8",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^3.4.17",
-    "typescript": "^5.8.3",
-    "typescript-eslint": "^8.38.0",
-    "vite": "^5.4.19"
-  }
+import { useState, useCallback } from 'react';
+import { useDropzone } from 'react-dropzone';
+import { Music, Upload, Loader2, CheckCircle, AlertCircle } from 'lucide-react';
+import { Button } from '@/components/ui/button';
+import { Card, CardContent } from '@/components/ui/card';
+import { Progress } from '@/components/ui/progress';
+import { useToast } from '@/hooks/use-toast';
+
+interface FileUploadProps {
+  onUploadComplete: (code: string) => void;
 }
+
+export const FileUpload = ({ onUploadComplete }: FileUploadProps) => {
+  const [isUploading, setIsUploading] = useState(false);
+  const [uploadProgress, setUploadProgress] = useState(0);
+  const [uploadStatus, setUploadStatus] = useState<'idle' | 'uploading' | 'success' | 'error'>('idle');
+  const { toast } = useToast();
+
+  const onDrop = useCallback(async (acceptedFiles: File[]) => {
+    const file = acceptedFiles[0];
+    if (!file) return;
+
+    // Validate file type
+    if (!file.type.startsWith('audio/')) {
+      toast({
+        title: 'Ошибка',
+        description: 'Пожалуйста, выберите аудио файл',
+        variant: 'destructive'
+      });
+      return;
+    }
+
+    // Validate file size (20MB)
+    if (file.size > 20 * 1024 * 1024) {
+      toast({
+        title: 'Ошибка',
+        description: 'Размер файла не должен превышать 20 МБ',
+        variant: 'destructive'
+      });
+      return;
+    }
+
+    setIsUploading(true);
+    setUploadStatus('uploading');
+    setUploadProgress(0);
+
+    try {
+      // Create FormData for file upload
+      const formData = new FormData();
+      formData.append('file', file);
+
+      setUploadProgress(80);
+
+      // Upload file to Netlify function
+      const response = await fetch('/api/upload', {
+        method: 'POST',
+        body: formData
+      });
+
+      if (!response.ok) {
+        const errorData = await response.json();
+        throw new Error(errorData.error || 'Upload failed');
+      }
+
+      const data = await response.json();
+
+      setUploadProgress(100);
+      setUploadStatus('success');
+      
+      setTimeout(() => {
+        onUploadComplete(data.code);
+      }, 1000);
+
+    } catch (error) {
+      console.error('Upload error:', error);
+      setUploadStatus('error');
+      toast({
+        title: 'Ошибка загрузки',
+        description: 'Не удалось загрузить файл. Попробуйте еще раз.',
+        variant: 'destructive'
+      });
+    } finally {
+      setTimeout(() => {
+        setIsUploading(false);
+        setUploadProgress(0);
+        setUploadStatus('idle');
+      }, 2000);
+    }
+  }, [onUploadComplete, toast]);
+
+  const { getRootProps, getInputProps, isDragActive } = useDropzone({
+    onDrop,
+    accept: {
+      'audio/*': ['.mp3', '.wav', '.ogg', '.m4a', '.flac']
+    },
+    maxFiles: 1,
+    disabled: isUploading
+  });
+
+  return (
+    <Card className="w-full max-w-lg mx-auto shadow-card border-muted">
+      <CardContent className="p-6">
+        <div
+          {...getRootProps()}
+          className={`upload-zone cursor-pointer ${isDragActive ? 'dragover' : ''} ${isUploading ? 'pointer-events-none opacity-50' : ''}`}
+        >
+          <input {...getInputProps()} />
+          
+          <div className="flex flex-col items-center gap-4">
+            {uploadStatus === 'idle' && (
+              <>
+                <div className="flex items-center justify-center w-16 h-16 rounded-full bg-gradient-primary">
+                  {isDragActive ? (
+                    <Upload className="w-8 h-8 text-primary-foreground" />
+                  ) : (
+                    <Music className="w-8 h-8 text-primary-foreground" />
+                  )}
+                </div>
+                
+                <div className="text-center">
+                  <h3 className="text-lg font-semibold text-foreground mb-2">
+                    {isDragActive ? 'Отпустите файл здесь' : 'Загрузите MP3 файл'}
+                  </h3>
+                  <p className="text-sm text-muted-foreground">
+                    Перетащите файл или кликните для выбора
+                  </p>
+                  <p className="text-xs text-muted-foreground mt-1">
+                    Максимальный размер: 20 МБ
+                  </p>
+                </div>
+              </>
+            )}
+
+            {uploadStatus === 'uploading' && (
+              <>
+                <div className="flex items-center justify-center w-16 h-16 rounded-full bg-gradient-primary animate-pulse-glow">
+                  <Loader2 className="w-8 h-8 text-primary-foreground animate-spin" />
+                </div>
+                
+                <div className="text-center w-full">
+                  <h3 className="text-lg font-semibold text-foreground mb-2">
+                    Загрузка файла...
+                  </h3>
+                  <Progress value={uploadProgress} className="w-full mb-2" />
+                  <p className="text-sm text-muted-foreground">
+                    {uploadProgress}% завершено
+                  </p>
+                </div>
+              </>
+            )}
+
+            {uploadStatus === 'success' && (
+              <>
+                <div className="flex items-center justify-center w-16 h-16 rounded-full bg-audio-success">
+                  <CheckCircle className="w-8 h-8 text-white" />
+                </div>
+                
+                <div className="text-center">
+                  <h3 className="text-lg font-semibold text-audio-success">
+                    Файл успешно загружен!
+                  </h3>
+                  <p className="text-sm text-muted-foreground">
+                    Генерируем ваш код...
+                  </p>
+                </div>
+              </>
+            )}
+
+            {uploadStatus === 'error' && (
+              <>
+                <div className="flex items-center justify-center w-16 h-16 rounded-full bg-destructive">
+                  <AlertCircle className="w-8 h-8 text-destructive-foreground" />
+                </div>
+                
+                <div className="text-center">
+                  <h3 className="text-lg font-semibold text-destructive">
+                    Ошибка загрузки
+                  </h3>
+                  <p className="text-sm text-muted-foreground">
+                    Попробуйте еще раз
+                  </p>
+                </div>
+              </>
+            )}
+          </div>
+        </div>
+
+        {uploadStatus === 'idle' && (
+          <div className="mt-4">
+            <Button 
+              onClick={() => (document.querySelector('input[type="file"]') as HTMLInputElement)?.click()}
+              className="w-full bg-gradient-primary hover:scale-105 transition-transform shadow-button"
+              disabled={isUploading}
+            >
+              <Music className="w-4 h-4 mr-2" />
+              Выбрать файл
+            </Button>
+          </div>
+        )}
+      </CardContent>
+    </Card>
+  );
+};
