--- a/package.json
+++ b/package.json
@@ -21,7 +21,11 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-progress": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.2",
-    "webdav": "^5.7.1"
+    "webdav": "^5.7.1",
+    "@tanstack/react-query": "^5.0.0",
+    "@radix-ui/react-accordion": "^1.1.2",
+    "@radix-ui/react-alert-dialog": "^1.0.5",
+    "@radix-ui/react-aspect-ratio": "^1.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
