--- a/package.json
+++ b/package.json
@@ -26,6 +26,11 @@
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-aspect-ratio": "^1.0.3"
+    "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-checkbox": "^1.0.4",
+    "react-day-picker": "^8.10.0",
+    "embla-carousel-react": "^8.0.0",
+    "recharts": "^2.12.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
