--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "recharts": "^2.12.0"
   },
   "devDependencies": {
+    "@vitejs/plugin-react-swc": "^3.5.0",
     "@eslint/js": "^9.13.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
